services/external-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service-port27017
spec:
  type: NodePort
  selector:
    external-service-port27017: NodePort
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-port80
spec:
  type: NodePort
  selector:
    external-service-port80: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-port3100
spec:
  type: NodePort
  selector:
    external-service-port3100: NodePort
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
