services/internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-service-port27017
spec:
  type: ClusterIP
  selector:
    internal-service-port27017: ClusterIP
  ports:
    - name: port27017
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: internal-service-port80
spec:
  type: ClusterIP
  selector:
    internal-service-port80: ClusterIP
  ports:
    - name: port80
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: internal-service-port3100
spec:
  type: ClusterIP
  selector:
    internal-service-port3100: ClusterIP
  ports:
    - name: port3100
      protocol: TCP
      port: 3100
      targetPort: 3100
