services/ingress.yml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.4/deploy/static/provider/cloud/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-internal-service-port80
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: internal-service-port80
              port: 
                number: 80
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: internal-service-port80
                port:
                  number: 80
